--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/img/soleil.png" />
+    <link rel="icon" type="image/png" href="./src/assets/img/logo.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bene.</title>
   </head>
